--- a/public/css/app.css
+++ b/public/css/app.css
@@ -72,7 +72,7 @@ body {
   line-height: 1.6;
   color: #212529;
   text-align: left;
-  background-color: #f8fafc;
+  background-color: #212121;
 }
 
 [tabindex="-1"]:focus {
@@ -517,7 +517,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #f8fafc;
+  background-color: #212121;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -4293,15 +4293,15 @@ input[type=button].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  box-shadow: 0 0 0 1px #212121, 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  box-shadow: 0 0 0 1px #212121, 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #f8fafc, 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
+  box-shadow: 0 0 0 1px #212121, 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -4510,8 +4510,8 @@ input[type=button].btn-block {
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
-  background-color: #f8fafc;
-  border-color: #dee2e6 #dee2e6 #f8fafc;
+  background-color: #212121;
+  border-color: #dee2e6 #dee2e6 #212121;
 }
 
 .nav-tabs .dropdown-menu {
@@ -20554,5 +20554,31 @@ input[type=range]::-ms-thumb {
 
 #draw_form_container {
   display: none;
+}
+
+@media screen and (max-width: 1024px) {
+  .admin-btns {
+    -webkit-box-pack: center !important;
+    justify-content: center !important;
+  }
+
+  .admin-btns .splitter {
+    display: none !important;
+  }
+
+  .admin-btns > * {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
+
+  .page-btns {
+    text-align: center;
+    margin-bottom: 5px;
+  }
+
+  .page-btns > a {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
 }
 
